--- a/src/assets/less/_vars.less
+++ b/src/assets/less/_vars.less
@@ -4,6 +4,7 @@
 // ------------- override defaults -------------
 // ---------------------------------------------
 
+@fixed_width_xxs: 40px;
 @fixed_width_xs: 80px;
 @fixed_width_sm: 100px;
 
