--- a/src/assets/less/splash.less
+++ b/src/assets/less/splash.less
@@ -2,9 +2,10 @@
   --splash-gradient: linear-gradient(to top left, @color_primary, @color_secondary);
 
   .splash-page {
-    height: 100vh;
-    height: 100svh;
+    min-height: 100vh;
+    min-height: 100svh;
     width: 100%;
+    // overflow-y: hidden;
   }
 
   .countdown {
