--- a/src/_includes/main/topbar.html
+++ b/src/_includes/main/topbar.html
@@ -9,7 +9,7 @@
                     <img class="d-none d-sm-block h-fix-md w-auto mb-n1" src="{{ relBase }}/media/logos/logo.png"/>
                 </div>
                 <div class="topbar-onlysplash">
-                    <img class="h-fix-md w-auto" src="{{ relBase }}/media/logos/logo-sm.png"/>
+                    <img class="d-none d-md-block h-fix-md w-auto" src="{{ relBase }}/media/logos/logo-sm.png"/>
                 </div>
             </a>
             <div class="text-primary">
