enlarge board subtitles

--- a/src/_includes/sections/board.html
+++ b/src/_includes/sections/board.html
@@ -12,7 +12,7 @@
     </script>
 
     {% if include.data.title %}
-    <div class="mt-3 text-muted smaller text-center">
+    <div class="mt-3 text-muted text-center">
         {% if include.data.link %}
 
         {%- assign stringToCheck = include.data.link %}
