--- a/src/_includes/sections/board-block.html
+++ b/src/_includes/sections/board-block.html
@@ -9,7 +9,7 @@
             })();
         </script>
         {% if include.data.title %}
-        <div class="mt-3 text-muted smaller text-center">
+        <div class="mt-3 text-muted text-center">
             {% if include.data.link %}
 
             {%- assign stringToCheck = include.data.link %}
@@ -38,7 +38,7 @@
         <div class="d-flex h-100">
             <div class="my-auto">
                 {{ include.content }}
-                <div class="mt-3 smaller">
+                <div class="mt-3">
                     &nbsp;
                 </div>
             </div>
