--- a/src/assets/less/_vars.less
+++ b/src/assets/less/_vars.less
@@ -13,14 +13,14 @@
 @threshold_overlay: 65%;
 
 @color_primary: #10427C;
-@color_secondary: #0085a1; // mix(#fdfdfd, @color_primary, 85%);
-@color_tertiary: mix(@color_primary, @color_secondary); // #ADFCF0; // mix(@color_primary, #fff, 10%);
+@color_secondary: mix(@color_primary, #0085a1);
 
-@color_outer: mix(#fff, @color_tertiary, @threshold_faded); // #F5F5F5; // mix(@color_primary, #dcc4c4, 20%); // @color_secondary;
+@color_outer: mix(#fff, @color_secondary, @threshold_faded);
 @color_outer_light: mix(@color_outer, #fff, @threshold_light);
 @color_outer_dark: mix(@color_outer, #10427C, @threshold_dark);
 
-@underline_links: false;
+@color_tertiary: @color_outer; //  #b0dcf0;                    // Only used for splash overlay
+@splash_overlay: fade(@color_tertiary, 80%);
 
 @color_code_base: mix(#fdfdfd, @color_primary, 85%);
 @color_code_bg: mix(@color_code_base, #fff, 45%);
