--- a/src/_includes/main/menu.html
+++ b/src/_includes/main/menu.html
@@ -22,7 +22,14 @@
             {%- continue -%}
             {%- endif -%}
 
+            {% if page.url == i_page.url or (include.active and include.active == id) %}{%- assign is_active = true -%}{% else %}{%- assign is_active = false -%}{% endif %}
+
             {%- assign subs = site.pages | where: "in_menu_popup",true | where: "parent",id | where_exp:"item", "item.parent != nil" | sort: 'order' -%}
+            {%- assign is_active_sub = false -%}
+            {%- for j_page in subs -%}
+            {% assign subid = j_page.url | split: '/' | last %}
+            {% if page.url == j_page.url or (include.active and include.active == subid) %}{%- assign is_active_sub = true -%}{% break %}{% endif %}
+            {%- endfor -%}
 
             {%- if subs.size == 0 -%}
 
@@ -33,7 +40,7 @@
             {%- assign link = relBase | append: i_page.url -%}
             {%- assign target = i_page.target | default: "_self" -%}
             {%- endif -%}
-            <a href="{{ link }}" target="{{ target }}" class="list-group-item list-group-item-action px-3 py-2 {% if page.url == i_page.url or (include.active and include.active == id) %}active{% endif %}">
+            <a href="{{ link }}" target="{{ target }}" class="list-group-item list-group-item-action px-3 py-2 {% if is_active %}active{% endif %}">
                 <div>
                     {{ i_page.menu_title | default: i_page.header | default: i_page.title }}
                     {%- if target == "_blank" -%}
@@ -46,8 +53,14 @@
 
             <div class="list-group-item p-0">
                 {%- if i_page.is_separator -%}
-                <button class="list-group-item list-group-item-action border-0 px-3 py-2" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-item-{{ forloop.index0 }}" aria-expanded="false"
-                        aria-controls="accordion-item-{{ forloop.index0 }}">
+                <button
+                        type="button"
+                        class="list-group-item list-group-item-action border-0 px-3 py-2"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#accordion-item-{{ forloop.index0 }}"
+                        aria-expanded="{% if is_active_sub %}true{% else %}false{% endif %}"
+                        aria-controls="accordion-item-{{ forloop.index0 }}"
+                >
                     <div class="d-flex w-100">
                         <div class="flex-fill">
                             {{ i_page.menu_title | default: i_page.header | default: i_page.title }}
@@ -67,7 +80,7 @@
                 {%- assign target = i_page.target | default: "_self" -%}
                 {%- endif -%}
                 <div class="d-flex">
-                    <a href="{{ link }}" target="{{ target }}" class="list-group-item list-group-item-action border-0 px-3 py-2 {% if page.url == i_page.url or (include.active and include.active == id) %}active{% endif %}">
+                    <a href="{{ link }}" target="{{ target }}" class="list-group-item list-group-item-action border-0 px-3 py-2 {% if is_active %}active{% endif %}">
                         <div>
                             {{ i_page.menu_title | default: i_page.header | default: i_page.title }}
                             {%- if target == "_blank" -%}
@@ -75,8 +88,14 @@
                             {%- endif -%}
                         </div>
                     </a>
-                    <button class="list-group-item list-group-item-action border-0 px-3 py-2 w-auto" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-item-{{ forloop.index0 }}" aria-expanded="false"
-                            aria-controls="accordion-item-{{ forloop.index0 }}">
+                    <button
+                            type="button"
+                            class="list-group-item list-group-item-action border-0 border-start px-3 py-2 w-auto"
+                            data-bs-toggle="collapse"
+                            data-bs-target="#accordion-item-{{ forloop.index0 }}"
+                            aria-expanded="{% if is_active_sub %}true{% else %}false{% endif %}"
+                            aria-controls="accordion-item-{{ forloop.index0 }}"
+                    >
                         <i class="fa-solid fa-angle-down collapse-closed"></i>
                         <i class="fa-solid fa-angle-up collapse-opened"></i>
                     </button>
@@ -84,9 +103,10 @@
                 {%- endif -%}
             </div>
 
-            <div id="accordion-item-{{ forloop.index0 }}" class="accordion-collapse collapse border-bottom" data-bs-parent="#menu-accordion">
+            <div id="accordion-item-{{ forloop.index0 }}" class="accordion-collapse collapse {% if is_active_sub %}show{% endif %} border-bottom" data-bs-parent="#menu-accordion">
                 {%- for j_page in subs -%}
                 {% assign subid = j_page.url | split: '/' | last %}
+                {% if page.url == j_page.url or (include.active and include.active == subid) %}{%- assign is_active_sub = true -%}{% else %}{%- assign is_active_sub = false -%}{% endif %}
                 {%- if j_page.external_link -%}
                 {%- assign link = j_page.external_link -%}
                 {%- assign target = j_page.target | default: "_blank" -%}
@@ -94,7 +114,7 @@
                 {%- assign link = relBase | append: j_page.url -%}
                 {%- assign target = j_page.target | default: "_self" -%}
                 {%- endif -%}
-                <a href="{{ link }}" target="{{ target }}" class="list-group-item list-group-item-action px-3 py-2 border-0 {% if page.url == j_page.url or (include.active and include.active == subid) %}active{% endif %}">
+                <a href="{{ link }}" target="{{ target }}" class="list-group-item list-group-item-action px-3 py-2 border-0 {% if is_active_sub %}active{% endif %}">
                     <div class="ps-3">
                         {{ j_page.menu_title | default: j_page.header | default: j_page.title }}
                         {%- if target == "_blank" -%}
