--- a/src/_includes/sections/cards.html
+++ b/src/_includes/sections/cards.html
@@ -1,4 +1,4 @@
-<div class="section-cards">
+<div class="section-cards" id="section-{{ include.file }}">
     <!--@formatter:off-->
         {%- assign delimiter_header = include.data.delimiter_header | default: "# " -%}
         {%- assign delimiter_header_size = delimiter_header | size -%}
