--- a/src/_includes/sections/image-block.html
+++ b/src/_includes/sections/image-block.html
@@ -1,4 +1,4 @@
-<div class="row g-4 {% if include.data.image_pos=='second' or include.data.image_pos=='last' or include.data.image_pos=='right' or include.data.image_pos=='end' %}flex-row-reverse{% else %}flex-row{% endif %} section-image-block">
+<div class="row g-4 {% if include.data.image_pos=='second' or include.data.image_pos=='last' or include.data.image_pos=='right' or include.data.image_pos=='end' %}flex-row-reverse{% else %}flex-row{% endif %} section-image-block" id="section-{{ include.file }}">
     <div class="col-12 col-lg-5 col-xxl-4">
         <img src="{{ relBase }}{{ include.data.image }}" alt="Image">
     </div>
