--- a/src/_includes/sections/text.html
+++ b/src/_includes/sections/text.html
@@ -1,3 +1,3 @@
-<div class="section-text">
-    {{ include.content }}
+<div class="section-text" id="section-{{ include.file }}">
+        {{ include.content }}
 </div>
