--- a/src/assets/less/_vars.less
+++ b/src/assets/less/_vars.less
@@ -25,3 +25,5 @@
 @color_code_base: mix(#fdfdfd, @color_primary, 85%);
 @color_code_bg: mix(@color_code_base, #fff, 45%);
 @color_code_outer: darken(@color_code_base, @threshold_dark);
+
+@color_link: @color_secondary;
