--- a/src/_layouts/blog_overview.html
+++ b/src/_layouts/blog_overview.html
@@ -4,6 +4,7 @@
     {% include basics.html %}
     {% include main/head.html %}
 </head>
+{% if page.external_link==nil and page.is_separator!=true -%}
 <body data-role="page" class="position-relative">
 
     {%- assign postlist_id = page.postlist_id -%}
@@ -101,4 +102,5 @@
     {% include main/cookie-hint.html %}
     {% include main/footer.html %}
 </body>
+{% endif -%}
 </html>
