--- a/src/_layouts/plain.html
+++ b/src/_layouts/plain.html
@@ -4,6 +4,7 @@
     {% include basics.html %}
     {% include main/head.html %}
 </head>
+{% if page.external_link==nil and page.is_separator!=true -%}
 <body data-role="page" class="position-relative">
 
     <noscript>
@@ -21,4 +22,5 @@
         {% include content.html %}
     </main>
 </body>
+{% endif -%}
 </html>
