--- a/src/assets/less/_vars.less
+++ b/src/assets/less/_vars.less
@@ -13,17 +13,17 @@
 @threshold_overlay: 65%;
 
 @color_primary: #10427C;
-@color_secondary: mix(@color_primary, #0085a1);
+@color_secondary: mix(@color_primary, #0085a1); // = #08648f = 8,100,143
 
-@color_outer: mix(#fff, @color_secondary, @threshold_faded);
+@color_outer: rgb(90, 230, 130); // mix(#fff, @color_secondary, @threshold_faded); // = #c1d8e3 = 193,216,227
 @color_outer_light: mix(@color_outer, #fff, @threshold_light);
 @color_outer_dark: mix(@color_outer, #10427C, @threshold_dark);
 
-@color_tertiary: @color_outer; //  #b0dcf0;                    // Only used for splash overlay
-@splash_overlay: fade(@color_tertiary, 80%);
+@color_tertiary: @color_outer; // Only used for splash overlay
+@splash_overlay: fade(@color_tertiary, 90%);
 
 @color_code_base: mix(#fdfdfd, @color_primary, 85%);
 @color_code_bg: mix(@color_code_base, #fff, 45%);
 @color_code_outer: darken(@color_code_base, @threshold_dark);
 
-@color_link: @color_secondary;
+@color_link: mix(@color_primary, #fff, (@threshold_light + @threshold_light / 2));
