--- a/src/assets/less/general.less
+++ b/src/assets/less/general.less
@@ -33,6 +33,9 @@
 :root {
   @media (min-width: @width_sm_min) {
     --bs-body-font-size: 1.25rem;
+    .code-highlighting code {
+      font-size: 1rem;
+    }
   }
 }
 
