--- a/src/assets/website.css
+++ b/src/assets/website.css
@@ -59588,10 +59588,34 @@ main #splash * {
   scroll-margin-top: 0;
 }
 #menu {
-  width: 350px;
+  width: 400px;
+  --bs-offcanvas-padding-x: 1rem;
+  --bs-offcanvas-padding-y: 1rem;
+}
+#menu .list-group-item,
+#menu .accordion-collapse {
+  border: 0 !important;
+}
+#menu .list-group-item {
+  padding: calc(var(--bs-offcanvas-padding-y) / 3) var(--bs-offcanvas-padding-x);
+}
+@media (min-width: 576px) {
+  #menu .list-group-item {
+    padding: calc(var(--bs-offcanvas-padding-y) / 2) var(--bs-offcanvas-padding-x);
+  }
+}
+#menu div.list-group-item {
+  padding: 0;
 }
 #menu .offcanvas-header {
-  padding: var(--bs-offcanvas-padding-y) var(--bs-offcanvas-padding-x) calc(var(--bs-offcanvas-padding-y) / 2) !important;
+  padding: var(--bs-offcanvas-padding-y) var(--bs-offcanvas-padding-x) !important;
+}
+#menu .offcanvas-header button {
+  padding-top: 0rem !important;
+  padding-bottom: 0rem !important;
+  padding-left: 0rem !important;
+  padding-right: 0rem !important;
+  padding: 0 !important;
 }
 #menu .offcanvas-footer {
   padding: var(--bs-offcanvas-padding-y) var(--bs-offcanvas-padding-x) !important;
