--- a/src/_layouts/blog_list.html
+++ b/src/_layouts/blog_list.html
@@ -44,7 +44,8 @@
         </div>
     </noscript>
 
-    <main class="container md-container m-between-5 mt-4 mb-5 pb-5">
+    {% assign id = page.url | split: '/' | last | default: "home" %}
+    <main class="container md-container m-between-5 mt-4 mb-5 pb-5" id="page-{{ id }}">
         <div class="mb-3">
             <h1>{{ postlist_page.title }} - {{ name }} "{{ key }}"</h1>
         </div>
