--- a/src/_layouts/blog_post.html
+++ b/src/_layouts/blog_post.html
@@ -31,7 +31,8 @@
         </div>
     </noscript>
 
-    <main class="container md-container m-between-5 mt-4 mb-5 pb-5">
+    {% assign id = page.url | split: '/' | last | default: "home" %}
+    <main class="container md-container m-between-5 mt-4 mb-5 pb-5" id="page-{{ id }}">
         <div class="mb-4">
             {% include main/post-header.html post=page link_badges=true %}
         </div>
