--- a/src/_layouts/plain.html
+++ b/src/_layouts/plain.html
@@ -14,7 +14,8 @@
         </div>
     </noscript>
 
-    <main class="container md-container m-between-5 mt-4 mb-5 pb-5">
+    {% assign id = page.url | split: '/' | last | default: "home" %}
+    <main class="container md-container m-between-5 mt-4 mb-5 pb-5" id="page-{{ id }}">
         <div class="mb-3">
             <h1>{{ page.header | default: page.title }}</h1>
         </div>
