--- a/src/_layouts/splash.html
+++ b/src/_layouts/splash.html
@@ -15,7 +15,8 @@
         </div>
     </noscript>
 
-    <main>
+    {% assign id = page.url | split: '/' | last | default: "home" %}
+    <main id="page-{{ id }}">
         <div class="d-none">
             <h1>{{ page.header | default: page.title }}</h1>
         </div>
