limit jsxgraph override

--- a/src/assets/less/jsxgraph_override.less
+++ b/src/assets/less/jsxgraph_override.less
@@ -1,6 +1,8 @@
-.jxgbox {
-  background-color: transparent; // @color_outer;
-  border: none;
-  border-radius: 0;
-  cursor: pointer;
+#page-home {
+  .jxgbox {
+    background-color: transparent; // @color_outer;
+    border: none;
+    border-radius: 0;
+    cursor: pointer;
+  }
 }
