--- a/src/assets/less/_vars.less
+++ b/src/assets/less/_vars.less
@@ -5,8 +5,8 @@
 // ---------------------------------------------
 
 @fixed_width_xxs: 40px;
-@fixed_width_xs: 80px;
-@fixed_width_sm: 100px;
+@fixed_width_xs: 75px;
+@fixed_width_sm: 90px;
 
 @threshold_active: 12%;
 @threshold_hover: 4%;
@@ -27,3 +27,5 @@
 @color_code_outer: darken(@color_code_base, @threshold_dark);
 
 @color_link: mix(@color_primary, #fff, (@threshold_light + @threshold_light / 2));
+
+@rounded_max_radius: 20%;
