get new tiles format from sketchometry

--- a/src/_includes/main/menu.html
+++ b/src/_includes/main/menu.html
@@ -130,7 +130,7 @@
         </div>
 
         <div class="mt-3 mb-5">
-            {%- include main/tiles.html -%}
+            {%- include part/tiles.html -%}
         </div>
     </div>
 </div>
