--- a/src/_includes/part/tile-half-slim.html
+++ b/src/_includes/part/tile-half-slim.html
@@ -3,7 +3,16 @@
     {% for i in (0..1) %}
     {%- assign data = include.data[i] -%}
 
-    <a href="{{ relBase }}{{ data.link }}" target="{{ data.target | default: '_self' }}"
+    {%- assign stringToCheck = data.link %}
+    {%- assign checkArray = stringToCheck | split: ':' -%}
+    {%- if checkArray[0] == 'http' or checkArray[0] == 'https' or data.target == "_blank" -%}
+    {%- assign link = data.link -%}
+    {%- assign target = data.target | default: "_blank" -%}
+    {%- else -%}
+    {%- assign link = relBase | append: data.link -%}
+    {%- assign target = data.target | default: "_self" -%}
+    {%- endif -%}
+    <a href="{{ link }}" target="{{ target }}"
        class="d-block p-1 w-100 h-100 btn-{{ data.colorclass | default: 'primary' }} border border-{{ data.colorclass | default: 'primary' }} overflow-hidden text-center tile-button tile-button-half-slim"
     >
         <div class="d-flex flex-column w-100 h-100">
