--- a/src/_includes/part/tile-half-square.html
+++ b/src/_includes/part/tile-half-square.html
@@ -1,7 +1,16 @@
 {%- assign data = include.data[0] -%}
 
 <div class="col-6">
-    <a href="{{ relBase }}{{ data.link }}" target="{{ data.target | default: '_self' }}"
+    {%- assign stringToCheck = data.link %}
+    {%- assign checkArray = stringToCheck | split: ':' -%}
+    {%- if checkArray[0] == 'http' or checkArray[0] == 'https' or data.target == "_blank" -%}
+    {%- assign link = data.link -%}
+    {%- assign target = data.target | default: "_blank" -%}
+    {%- else -%}
+    {%- assign link = relBase | append: data.link -%}
+    {%- assign target = data.target | default: "_self" -%}
+    {%- endif -%}
+    <a href="{{ link }}" target="{{ target }}"
        class="d-block p-1 w-100 h-100 square btn-{{ data.colorclass | default: 'primary' }} border border-{{ data.colorclass | default: 'primary' }} overflow-hidden text-center tile-button tile-button-half-square"
     >
         <div class="d-flex flex-column w-100 h-100">
