--- a/src/_includes/part/tile-half-slim.html
+++ b/src/_includes/part/tile-half-slim.html
@@ -26,7 +26,7 @@
                 <i class="fa-fw {{ data.icon }}">{% if data.icon == '' %}&nbsp;{% endif %}</i>
             </div>
             {%- endif -%}
-            <div class="small h-fix-xxs shorten-content-x tile-label">
+            <div class="small shorten-content-x tile-label">
                 {{ data.title | default: "" }}
             </div>
         </div>
