--- a/src/_includes/part/tile-half-square.html
+++ b/src/_includes/part/tile-half-square.html
@@ -24,7 +24,7 @@
                 <i class="fa-fw {{ data.icon }}">{% if data.icon == '' %}&nbsp;{% endif %}</i>
             </div>
             {%- endif -%}
-            <div class="small h-fix-xxs shorten-content-x tile-label mt-1">
+            <div class="small shorten-content-x tile-label mt-1">
                 {{ data.title | default: "" }}
             </div>
         </div>
