--- a/src/assets/less/additions.less
+++ b/src/assets/less/additions.less
@@ -307,3 +307,9 @@ img {
     .gen-shortcuts-hover(@bootstrap_colors);
   }
 }
+
+.jsxgraph-logo-clip {
+  .rounded-0();
+  .rounded-top-start-max();
+  .rounded-bottom-end-max();
+}
