improve tile layouts `squares` and `icons`

--- a/src/_includes/part/shortcuts.html
+++ b/src/_includes/part/shortcuts.html
@@ -49,7 +49,7 @@
             <a href="{{ link }}" target="{{ target }}" class="link-quiet d-flex d-sm-block m-between-3 m-between-sm-0 align-items-center">
                 {% if i_page.icon %}
                 <div class="btn btn-{{ color }} square rounded-0 {{ class }} overflow-hidden w-fix-xxs w-fix-xs-over-sm w-fix-sm-over-md mx-sm-auto mb-sm-2 p-0"
-                     style="padding: {{padding-y}} {{padding-x}};"
+                     style="padding: {{padding_y}} {{padding_x}};"
                 >
                     <div class="d-flex justify-content-center align-items-center h-100 w-100">
                         <div class="big d-block d-sm-none">
