--- a/src/_includes/part/tile-icons.html
+++ b/src/_includes/part/tile-icons.html
@@ -44,25 +44,24 @@
     {%- assign link = relBase | append: data.link -%}
     {%- assign target = data.target | default: "_self" -%}
     {%- endif -%}
-    <a href="{{ link }}" target="{{ target }}"       class="link-quiet d-block align-items-center overflow-hidden text-center {{ class }} tile-button tile-button-squares"    >
-
+    <a href="{{ link }}" target="{{ target }}" class="link-quiet d-block align-items-center overflow-hidden text-center tile-button tile-button-icons">
         {% if data.image %}
-        <div class="d-block w-100 h-100 square btn-{{ data.colorclass | default: 'primary' }} border border-{{ data.colorclass | default: 'primary' }}">
+        <div class="d-block w-100 h-100 square btn-{{ data.colorclass | default: 'primary' }} border border-{{ data.colorclass | default: 'primary' }} {{ class }}">
             <div class="flex-fill mx-n1 mt-n1 position-relative">
                 <div class="w-100 h-100 image-bg-cover" style="background-image: url('{{ relBase }}{{ data.image }}');"></div>
                 <div class="position-absolute top-0 start-0 end-0 bottom-0 bg-{{ data.colorclass | default: 'primary' }} opacity-33"></div>
             </div>
         </div>
         {% else %}
-        <div class="btn btn-{{ data.colorclass | default: 'primary' }} border border-{{ data.colorclass | default: 'primary' }} d-block w-100 h-100 square rounded-0 {{ class }} overflow-hidden text-center w-fix-sm mb-2 p-0"
-             style="padding: {{padding-y}} {{padding-x}};"
+        <div class="btn btn-{{ data.colorclass | default: 'primary' }} border border-{{ data.colorclass | default: 'primary' }} d-block mx-auto w-100 w-90-over-xs w-80-over-md square rounded-0 {{ class }} overflow-hidden text-center mb-1 p-0"
+             style="padding: {{padding_y}} {{padding_x}};"
         >
             <div class="d-flex justify-content-center align-items-center h-100 w-100">
                 <i class="biggest fa-fw {{ data.icon }}">{% if data.icon == '' %}&nbsp;{% endif %}</i>
             </div>
         </div>
         {% endif %}
-        <div class="smaller shorten-content-x tile-label" style="padding: 0 {{padding-x}};">
+        <div class="shorten-content-x  mb-2 tile-label" style="padding: 0 {{padding-x}};">
             {{ data.title | default: "" }}
         </div>
     </a>
